--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="icons8-heart-48.png">
 </head>
 
-<body class="bg-yellow-700 text-gray-50 flex flex-col min-h-screen align-items-center">
+<body class="bg-yellow-900 text-white flex flex-col min-h-screen align-items-center">
     <main>
 
     <header class="flex flex-row justify-center gap-1 items-center p-4 ">
@@ -21,42 +21,31 @@
     </header>
 
     <section>
-        <nav class="bg-yellow-600 m-1 p-0.5 rounded-lg">
+        <nav class="bg-yellow-800 m-1 p-0.5 rounded-lg">
             <ul class="flex justify-center space-x-4 mb-6 gap-1 p-2 text-lg font-semibold">
-                <a href="" class="hover:text-blue-500"><li>Her</li></a>
-                <a href="" class="hover:text-blue-500"><li>Our Sounds</li></a>
-                <a href="" class="hover:text-blue-500"><li>Memories</li></a>
-                <a href="" class="hover:text-blue-500"><li>Plans</li></a>
+                <a href="Her.html" class="hover:text-blue-500"><li>Her</li></a>
+                <a href="OurSounds.html" class="hover:text-blue-500"><li>Our Sounds</li></a>
+                <a href="Memories.html" class="hover:text-blue-500"><li>Memories</li></a>
+                <a href="Plans.html" class="hover:text-blue-500"><li>Plans</li></a>
+                <a href="Apology.html" class="hover:text-blue-500"><li>Sorry</li></a>
             </ul>
         </nav>
     </section>
 
-    <section id="intro" class="text-center p-2 text-center">
-        <p class="text-2xl text-center">Hey Damola</p>
-        <p>I know you still have me on a time out, and for good reason..</p>
-        <p>But I can't stand you being mad at me..</p>
-        <p>I just still have to ask?</p>
+    <section id="content" class="flex-grow p-4 text-center">
+        <h2 class="text-3xl font-semibold mb-4">Hey Babes</h2>
+        <p class="text-lg">Welcome to your very own website.</p>
+        <p class="text-lg">Your very own corner of the internet, dedicated to showing how much I care about you.<br>
+        This is where I'll be adding little things about us.<br>
+        What shows we are into, our memories, plans and so much more.<br>
+        I'm still new at this so sorry if the site isn't the best 😅<br>
+        </p>
     </section>
 
-    <section class="p-2 text-center" id ="questionSection">
-        <p class="text-2xl text-center p-3" >Will you forgive me?</p>
-        <button id="revealButton" class="bg-yellow-800 text-gray-50 px-3 py-2 rounded-lg text-2xl hover:bg-yellow-900 focus:outline-none focus:ring-2 focus:ring-yellow-400">
-           Yes
-        </button>
-        <button id="NoWayBro" class="bg-yellow-800 text-gray-50 px-3 py-2 rounded-lg text-2xl hover:bg-yellow-900 focus:outline-none focus:ring-2 focus:ring-yellow-400">
-           No
-        </button>
-    </section> 
-
-        <section class="p-2" id="apology" hidden="true">
-            <p class="text-1xl mb-4">I just wanted to say sorry again for being a bad boyfriend. I know I haven't been the best, and I want you to know that I'm committed to making things right.</p>
-            <p class="text-1xl mb-4"> </p>
-            <p class="text-1xl mb-4">You mean the world to me, and I hate the thought of hurting you. Please forgive me for my mistakes. I'm ready to listen, learn, and grow so that I can be the partner you deserve.</p>
-            <p class="text-1xl mb-4">Thank you for your patience and understanding. I love you more than words can express, and I'm determined to show you that every day.</p>
-            <p class="text-1xl">With all my love,<br>Soji</p>
-            <button id="return" class="mt-4 bg-yellow-800 text-gray-50 px-3 py-2 rounded-lg text-2xl hover:bg-yellow-900 focus:outline-none focus:ring-2 focus:ring-yellow-400">
-               Close</button>   
-        </section>
+    <section>
+        <p class="text-lg text-center p-2">Here is to the best girlfriend ever 🎉</p>
+        <img src="IMG-20251002-WA0025.jpg" alt="babe_2" class="w-auto h-48 folat-left rounded-full border-4 border-yellow-900 mx-auto mb-4">
+    </section>
 
     </main>
 
@@ -66,21 +55,5 @@
 
 </body>
 
-<script>
-    document.getElementById('NoWayBro').addEventListener('click', function() {
-        alert("Error, Option does not exist 🙃.");
-    });
-    document.getElementById('revealButton').addEventListener('click', function() {
-        document.getElementById('apology').hidden = false
-        document.getElementById('intro').hidden = true
-        document.getElementById('questionSection').hidden = true;
-    });
-   
-    document.getElementById('return').addEventListener('click', function() {
-        document.getElementById('apology').hidden = true
-        document.getElementById('questionSection').hidden = false;
-        document.getElementById('intro').hidden = false
-    });
-</script>
 
 </html>
