--- a/Apology.html
+++ b/Apology.html
@@ -8,6 +8,28 @@
     <link rel="icon" type="image/svg+xml" href="icons8-heart-48.png">
 </head>
 <body class="bg-yellow-900 text-white flex flex-col min-h-screen align-items-center">
+    <main>
+    <header class="flex flex-row justify-center gap-1 items-center p-4 ">
+        <div>            
+        <a href="index.html"><h1 class="text-center text-5xl font-bold m-10">For Sleepy</h1></a>
+        </div>
+        <div>
+            <img src="Screenshot_20250926_104716_WhatsApp(1).jpg" alt="babe_1" class="h-24 w-24 folat-left rounded-full border-4 border-yellow-900">
+        </div>
+    </header>
+
+    <section>
+        <nav class="bg-yellow-800 m-1 p-0.5 rounded-lg">
+            <ul class="flex justify-center space-x-4 mb-6 gap-1 p-2 text-lg font-semibold">
+                <a href="Her.html" class="hover:text-blue-500"><li>Her</li></a>
+                <a href="OurSounds.html" class="hover:text-blue-500"><li>Our Sounds</li></a>
+                <a href="Memories.html" class="hover:text-blue-500"><li>Memories</li></a>
+                <a href="Plans.html" class="hover:text-blue-500"><li>Plans</li></a>
+                <a href="Apology.html" class="hover:text-blue-500"><li>Sorry</li></a>
+            </ul>
+        </nav>
+    </section>
+
 <section id="intro" class="text-center p-2 text-center">
         <p class="text-2xl text-center">Hey Damola</p>
         <p>I know you still have me on a time out, and for good reason..</p>
@@ -36,12 +58,13 @@
         </section>
 
     </main>
-
+    
     <footer class="mt-auto text-center p-4 bg-yellow-800 p-5">
-        <p>&copy; 2025 A very sorry boyfriend. All rights reserved.</p>
-    </footer>
-
+            <p>&copy; 2025 A very sorry boyfriend. All rights reserved.</p>
+        </footer>
+    
 </body>
+
 
 <script>
     document.getElementById('NoWayBro').addEventListener('click', function() {
