--- a/OurSounds.html
+++ b/OurSounds.html
@@ -28,5 +28,48 @@
             </ul>
         </nav>
     </section>
+        <p class="text-center text-lg">Here are some of our best playlist yet<br>
+        Ranked by our shared prefrence.</p>
+    <section>
+        <div class="flex flex-row p-5 justify-center gap-4">
+            <div class="border-grey-50 border-4 rounded my-10"> 
+                <p>Silver</p>
+                <div class="border-yellow-700 border-4 rounded">
+                    <img>
+                    <p>Timeless</p>
+                    <a href="spotify/">Listen</a>
+                </div>
+            </div>
+            <div class="border-grey-50 border-4 rounded "> 
+                <p>Gold</p>
+                <div class="border-yellow-700 border-4 rounded">
+                    <img>
+                    <p>Ethereal</p>
+                    <a href="spotify/">Listen</a>
+                </div>
+            </div>
+            <div class="border-grey-50 border-4 rounded my-20"> 
+                <p>Bronze</p>
+                <div class="border-yellow-700 border-4 rounded">
+                    <img>
+                    <p>Zzzzz</p>
+                    <a href="spotify/">Listen</a>
+                </div>
+            </div>
+        </div>
+        <div class="p-5">
+        <p class="text-center text-lg ">Honurable mentions:</p>
+        <ul class="text-lg text-center">
+            <li>For Sleepy</li>
+            <li>Questions</li>
+        </ul>
+    </div>
+    </section>
+
+    
+
+    <footer class="mt-auto text-center p-4 bg-yellow-800 p-5">
+        <p>&copy; 2025 A very sorry boyfriend. All rights reserved.</p>
+    </footer>
 </body>
 </html>
