--- a/OurSounds.html
+++ b/OurSounds.html
@@ -28,36 +28,45 @@
             </ul>
         </nav>
     </section>
+        
+    <section>
         <p class="text-center text-lg">Here are some of our best playlist yet<br>
         Ranked by our shared prefrence.</p>
-    <section>
-        <div class="flex flex-row p-5 justify-center gap-4">
-            <div class="border-grey-50 border-4 rounded my-10"> 
+
+        <div class="flex flex-row p-3 justify-center gap-5">
+            <div class="rounded my-10 text-center m-0 p-0"> 
                 <p>Silver</p>
-                <div class="border-yellow-700 border-4 rounded">
-                    <img>
-                    <p>Timeless</p>
-                    <a href="spotify/">Listen</a>
+                <div class="border-yellow-700 border-4 rounded gap-2 p-2">
+                    <img src="20250401_202850.jpg" class="h-24 w-24">
+                    <p class="text-lg">Timeless</p>
+                    <a href="https://open.spotify.com/playlist/7oBUxUtOs9zz4acUuFkLE7?si=7812aaeccc084718&pt=a728b8d77281878a54faa97b72de299f" class="bg-yellow-700 rounded p-1 shadow hover:bg-yellow-800">Listen</a>
                 </div>
             </div>
-            <div class="border-grey-50 border-4 rounded "> 
+            <div class="rounded text-center "> 
                 <p>Gold</p>
-                <div class="border-yellow-700 border-4 rounded">
-                    <img>
-                    <p>Ethereal</p>
-                    <a href="spotify/">Listen</a>
+                <div class="border-yellow-700 border-4 rounded p-2">
+                    <img src="20250625_190116.jpg" class="h-24 w-24">
+                    <p class="text-lg">Ethereal</p>
+                    <a href="https://open.spotify.com/playlist/6psuiGLCjlpYGVeg0FgJLc?si=a452bd9d60864863&pt=844cfcc6017f6c1331bd86afb0366150" class="bg-yellow-700 rounded p-1 shadow hover:bg-yellow-800">Listen</a>
                 </div>
             </div>
-            <div class="border-grey-50 border-4 rounded my-20"> 
+            <div class="rounded my-20 text-center m-0 p-0"> 
                 <p>Bronze</p>
-                <div class="border-yellow-700 border-4 rounded">
-                    <img>
-                    <p>Zzzzz</p>
-                    <a href="spotify/">Listen</a>
+                <div class="border-yellow-700 border-4 rounded p-2">
+                    <img src="20251009_051918.jpg" class="h-24 w-24">
+                    <p class="text-lg">Zzzzz</p>
+                    <a href="https://open.spotify.com/playlist/5Jtm5hapRqySPqjT4LKP4H?si=57c5c113b38f4586&pt=c5df1a2045da4c8ccff628225204c016" class="bg-yellow-700 rounded p-1 shadow hover:bg-yellow-800">Listen</a>
                 </div>
             </div>
         </div>
-        <div class="p-5">
+        
+        <!-- 
+        <div class="flex justify-center">
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6psuiGLCjlpYGVeg0FgJLc?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        -->
+
+        <div class="p-3">
         <p class="text-center text-lg ">Honurable mentions:</p>
         <ul class="text-lg text-center">
             <li>For Sleepy</li>
