--- a/Her.html
+++ b/Her.html
@@ -28,5 +28,14 @@
             </ul>
         </nav>
     </section>
+
+    <section>
+        <p>Sleepy also know as Adedamola is an one of a kind, beautiful, intelligent and very scary girl. <br>
+        First met her staring at me and meeting her gaze I was instantly captivated. <br>
+        Her smile, her resourcefulness and her amazing taste in music are just a few of the things that make her so special. <br>
+        I am so lucky to have her in my life and I cherish every moment we spend together. <br>
+        Here are some things that make her the amazing person she is: <br>
+        </p>
+    </section>
 </body>
 </html>
