--- a/Her.html
+++ b/Her.html
@@ -29,13 +29,14 @@
         </nav>
     </section>
 
-    <section>
+    <section class="text-center p-4">
         <p>Sleepy also know as Adedamola is an one of a kind, beautiful, intelligent and very scary girl. <br>
         First met her staring at me and meeting her gaze I was instantly captivated. <br>
         Her smile, her resourcefulness and her amazing taste in music are just a few of the things that make her so special. <br>
         I am so lucky to have her in my life and I cherish every moment we spend together. <br>
         Here are some things that make her the amazing person she is: <br>
         </p>
+        <p> HER </p>
     </section>
 </body>
 </html>
