--- a/Plans.html
+++ b/Plans.html
@@ -28,5 +28,9 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="text-center p-4">
+            <p>To be made....</p>
+        </section>
 </body>
 </html>
